solve dashboard dark mode, set dark/light css variables, improves #372

--- a/interni/src/app/modules/home/components/home-card/home-card.component.scss
+++ b/interni/src/app/modules/home/components/home-card/home-card.component.scss
@@ -3,7 +3,7 @@
 :host {
   display: block;
   padding: 1em;
-  background-color: $grey;
+  background-color: var(--lightGrey);
   border-radius: 0.5em;
 }
 bo-home-card-title {
